# CS-2024-2025

./: S2T11.c  S2T12.c  S2T13.c  S2T14.c  S2T18.c  S2T2.c  S2T3.c  S2T4.c  S2T5.c  S2T6.c  Task1.cpp  Task2.cpp  Task3.cpp  Task5  Task5.cpp  Task6.cpp  a.out  info.cpp  main  windows
Containers/: Task4.cpp
SFML_events/: Task1_event.cpp  Task1_static.cpp
SFML_task_1_till_4/: movement_on_circle.cpp  moving_circle.cpp  text.cpp
Seminar 1/: S1T1.c  S1T2.c  S1T3.c  S1T41.c  S1T42.c  S1T43.c  S1T44.c  S1T5 .c  S1T6.c  S1T7.c  S1T8.c
Seminar 1: main/: S1T42.c
Seminar 2/: S2T16.c
Seminar 2: arrays, matrix/: S2T17.c
Seminar 3: functions /functions/: S3T3.c  S3T42.c  S3T5.c  S3T9.c
Seminar 3: functions /types/: S3T1.c  S3T2.c  S3T3.c  S3T5.c  S3T6.c  a.out
Seminar 3: functions and types /functions/: a.out
Templates/: Task6.cpp
dynarray/: dynarray.h  list.h  main3.c
inheritance/: draggable.cpp  shapes.cpp
pointers/: a.out  pointer1.txt  pointer3.c  pointer4a.c  pointer4b.c  pointer5.c  pointer6.c  pointer7.c  pointer8.c  pointer9.c
polimorph/: Task1.txt  individuals_1.cpp  individuals_2.cpp
polimorph/task3/: draggable.hpp  main  main.cpp  widget.hpp
segments/: a.out  invisible_man.txt  seg3.c  seg7.c
segments/Task_1/: seg1.c  seg10.c  seg2.c  seg3.c  seg4.c  seg5.c  seg6.c  seg8.c
segments/Task_2/: test.txt
spam/: command  command.cpp  command_new.cpp
strings/: a.out  rep  repeater.c  sort.c  str1c.c  str3.c  str4.c  str6.c  str7.c
structure/: structure1.c  structure2.txt  structure5.c
term_4_utilt/Basics Cmake/Task_3/: CMakeLists.txt
(+151 files in other folders)
